# code-share-clone

./: docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile  codeshare.db  codeshare.db-shm  codeshare.db-wal
backend/src/: db.rs  error.rs  main.rs
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: ImageUpload.tsx  ShareModal.tsx  Toolbar.tsx
