[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[features]
# Use this on Render/Linux: cargo build --release --features use-openssl
use-openssl = ["mongodb/openssl-tls"]

[dependencies]
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Default: rustls (works on Mac). use-openssl feature switches to OpenSSL for Linux/Render.
mongodb = { version = "2.8", features = ["tokio-runtime"] }
bson = { version = "2", features = ["chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
nanoid = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
regex = "1"
dashmap = "5"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["multipart", "json"] }